<resources>
    <string name="app_name">Telemesh</string>
    <string name="activity_view_profile">My profile</string>
    <string name="enter_first_name">Type your first name</string>
    <string name="enter_last_name">Type your last name</string>
    <string name="signup">Next</string>
    <string name="done">Done</string>
    <string name="myDigits"> abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890 </string>
    <string name="create_user">Create User</string>
    <string name="select_avatar">Select an avatar</string>
    <string name="select_photo">Select Avatar</string>
    <string name="title_discoverd_fragment">Nearby users</string>
    <string name="title_personal_fragment">Personal Contacts</string>
    <string name="title_message_feed_fragment">Broadcast</string>
    <string name="title_settings_fragment">My Telemesh</string>
    <string name="title_conversation_fragment">Conversation</string>
    <string name="logo_image">logo image</string>
    <string name="double_press_exit">Please click BACK again to exit.</string>
    <string name="chat_send_button_description" translatable="false">Send icon.</string>
    <string name="demo_language">English</string>
    <string name="activity_about_us">About Telemesh</string>
    <string name="app_version">Version:</string>
    <string name="no_contact_available">No Nearby User Found Yet</string>
    <string name="no_conversation">No Conversation Yet</string>
    <string name="no_message_available">No broadcast message for you</string>
    <string name="search">Search People</string>
    <string name="type_message">Type a message</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="settings_choose_language">Language</string>
    <string name="settings_share_app">Share this app with friends</string>
    <string name="settings_open_wallet">My wallet</string>
    <string name="choose_language">Choose a Language</string>
    <string name="image">Image</string>
    <string name="discovering_users">Searching Nearby</string>
    <string name="searching">Searching…</string>
    <string name="data_plan">My data plan</string>
    <string name="no_chat_available">Type to Start a Conversation</string>
    <string name="company_org">Company/Organization: %s</string>
    <string name="unicef">UNICEF</string>
    <string-array name="language_list">
        <item>English</item>
        <item>বাংলা</item>
    </string-array>
    <string-array name="language_code_list">
        <item>en</item>
        <item>bn</item>
    </string-array>
    <string name="mesh_not_initiated">Mesh is not initialized yet</string>
    <string name="password_message">Password must contain at least 1 letter, number, and special character</string>
    <string name="settings_open_log">Device Log</string>
    <string name="badge_count_more_than_99">99+</string>
    <string name="diagram_map">Diagram Map</string>
    <string name="do_you_want_to_update">Do you want to update?</string>
    <string name="update">Update</string>
    <string name="app_update">App Update</string>
    <string name="ask_me_later">Ask me later</string>
    <string name="update_app">Update App</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="build_version">Build Version:</string>
    <string name="active_online">Active Now</string>
    <string name="active_offline">Offline</string>
    <string name="onboard_image">Onboard image</string>
    <string name="i_m_a_new_user">I\'m a New User</string>
    <string name="i_m_a_returning_user">I\'m a Returning User</string>
    <string name="profile_selection_image">Profile selection image</string>
    <string name="name_field_icon">Name field icon</string>
    <string name="user_id_copy">User id copy</string>
    <string name="user_id_qr_image">User id qr Image</string>
    <string name="export_my_profile">EXPORT MY PROFILE</string>
    <string name="copied">Copied</string>
    <string name="open_source_edition">Open Source Edition</string>
    <string name="about_description">Telemesh is a messaging app designed with Blockchain and Mesh networking. Unlike traditional messaging app Telemesh works with both internet and without internet connectivity. Telemesh is actively maintained by W3 Engineers Ltd.</string>
    <string name="copyright_text">Copyright 2019 W3 Engineers Ltd.</string>
    <string name="license_text">Licensed under the Apache License, Version 2.0</string>
    <string name="privacy_policy"><a href="https://telemesh.net/privacy-policy/">Privacy Policy</a></string>
    <string name="terms_of_use"><a href="https://telemesh.net/terms-of-use/">Terms of Use</a></string>
    <string name="telemesh_website"><a href="https://telemesh.net/">Telemesh Website</a></string>
    <string name="w3_engineers_website"><a href="https://w3engineers.com/">W3 Engineers Website</a></string>
    <string name="welcome_back">Welcome back</string>
    <string name="import_my_profile">Import Another ID</string>
    <string name="search_background">search background</string>
    <string name="please_set_up_an_8_digit_pin_for_your_account_security">Please set up an 8 digit password for your account security. Password must contain at least 1 letter, number, and special character.</string>
    <string name="pin_instruction">Please remember your password for you will need this in case of  account recovery.</string>
    <string name="skip">Continue</string>
    <string name="clear_search_text">Clear search text</string>
    <string name="close_search">Close search</string>
    <string name="content_description_import_success">Import Success</string>
    <string name="import_successful">Import successful</string>
    <string name="pin_provide_instruction">Please provide your password to continue.</string>
    <string name="continue_button">Continue</string>
    <string name="enter_eight_digit_password">Please Enter at least 8 digit password</string>
    <string name="enter_password_here">Enter password here:</string>
    <string name="create_profile">Create profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="file_exit">A user account already exists, would you like to continue with that? Your address is %s</string>
    <string name="or">or</string>
    <string name="warning">WARNING!!</string>
    <string name="wallet_lost_warning">If you import another ID you will loss previous id. Do you want to continue?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="enter_valid_first_name">Enter valid first name</string>
    <string name="enter_valid_last_name">Enter valid last name</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="edit">EDIT</string>
    <string name="send_feedback">Feedback</string>
    <string name="add_your_feedback">Add your feedback</string>
    <string name="feedback_submitted_successfully">Feedback submitted successfully</string>
    <string name="please_write_your_feedback">Please write your feedback</string>
    <string name="set_new_network_prefix">Set new network prefix</string>
    <string name="your_current_network_prefix">Your current network prefix is <b>%s</b>.</string>
    <string name="set_ssid">Set SSID</string>
    <string name="def_ssid">chocolate</string>
    <string name="please_wait">Please Wait…</string>
    <string name="app_updating_please_wait">App Updating please wait..</string>
    <string name="feedback">Feedback</string>
    <string name="no_favorite">No favorite user found</string>
    <string name="no_groups">No group found</string>
    <string name="minimu_ssid_character">Minimum character limit is 3</string>
    <string name="change">Change</string>
    <string name="a_new_version">A new version </string>
    <string name="is_available_for_telemesh">is available for Telemesh</string>
    <string name="favourite">Favourite</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="phone_storage_not_enough">Your phone space not enough</string>
    <string name="permission">Permission needed</string>
    <string name="permission_for_signup">Need to allow permission on Telemesh app to work properly. You can give permission manually from setting</string>
    <string name="gps_alert">Turn on location</string>
    <string name="for_better_performance">To get the best results please turn on your location service.</string>
    <string name="negative_button"><![CDATA[<font color=\'#083480\'>I’m a new user</font>]]></string>
    <string name="button_postivive"><![CDATA[<font color=\'#083480\'>Continue</font>]]></string>
    <string name="alert_title_text"><![CDATA[<font color=\'#ff5f25\'>WARNING!!</font>]]></string>
    <string name="service_app_alert_title_text"><![CDATA[<font color=\'#ff5f25\'>Update!!</font>]]></string>
    <string name="service_app_update_message">To smoothly use all features of Teleemsh app please update Telemesh Service app.</string>
    <string name="button_later"><![CDATA[<font color=\'#083480\'>Later</font>]]></string>
    <string name="i_understand">I Understand</string>
    <string name="app_update_information">Telemesh has some important updates on the latest release. This app won\'t work unless you update the latest version of Telemesh.</string>
    <string name="terms_of_use_details">Terms of Use</string>
    <string name="interruption_title">%s Interruption</string>
    <string name="hardware_interruption">%s turned off. Telemesh would not work properly.</string>
    <string name="permission_interruption">%s permission is disabled. Telemesh would not work properly.</string>
    <string name="permission_xiomi">To deliver the best experience TeleService needs a few system permissions.\n\nPlease go to your device settings and search for Permissions.
                          \nFrom Permissions screen tap “Other Permissions” then tap TeleService.
                          \nAllow all the permissions from TeleService screen which are not marked as green.
                          \n\nAlternatively, you can also go “Other Permissions” screen by Manage apps > TeleService > Other permissions. </string>
    <string name="got_it">Got It</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="want_to_join_this_group">Want to join this group?</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="join">Join</string>
    <string name="new_chat">New Chat</string>
    <string name="new_group">New Group</string>
    <string name="group_name_hint">Name</string>
    <string name="total_participants">Total participants</string>
    <string name="add_member">Add member</string>
    <string name="remove_group_member">Remove group member</string>
    <string name="group_admin">Group Admin</string>
    <string name="leave_group">Leave group</string>
    <string name="group_name_updated">Group Name updated</string>
    <string name="other_profile">%s\'s Profile</string>
    <string name="only_admin_can_add_member">Only admin can add a member</string>
    <string name="add_new_member">Add new member</string>
    <string name="only_admin_can_remove_member">Only admin can remove a member</string>
    <string name="no_user_available">No User Found Yet</string>
    <string name="only_admin_can_change_group_name">Only admin can change group name</string>
    <string name="broadcast_notification">You have %d new broadcast message</string>
    <string name="favourit_button_image">favourit button image</string>
    <string name="expanded_image_holder">Expanded image holder</string>
</resources>