<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_import_profile_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.importprofile.ImportProfileActivity">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:contentDescription="@string/txt_description_back"
            android:padding="@dimen/padding_5"
            android:src="@mipmap/ic_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/activity_import_profile_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_import_profile_scroll_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_logo"
                    android:layout_width="@dimen/width_250"
                    android:layout_height="@dimen/height_100"
                    android:contentDescription="@string/logo_image"
                    android:src="@mipmap/splash_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_onboard"
                    android:layout_width="@dimen/width_250"
                    android:layout_height="@dimen/height_205"
                    android:contentDescription="@string/onboard_image"
                    android:src="@mipmap/ic_onboard_return_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_logo" />

                <TextView
                    android:id="@+id/text_view_welcome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:gravity="center"
                    android:text="@string/welcome_back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_onboard" />


                <Button
                    android:id="@+id/button_continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:text="@string/continue_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:background="@drawable/drawable_button_bg_with_color"
                    app:layout_constraintBottom_toTopOf="@+id/button_import_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_welcome"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/text_view_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14"
                    app:layout_constraintBottom_toTopOf="@+id/button_import_profile"
                    app:layout_constraintEnd_toEndOf="@+id/button_import_profile"
                    app:layout_constraintStart_toStartOf="@+id/button_import_profile"
                    app:layout_constraintTop_toBottomOf="@+id/button_continue" />

                <Button
                    android:id="@+id/button_import_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:text="@string/import_my_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/drawable_button_bg_with_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_continue" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>